--- a/03Express/views/crear.ejs
+++ b/03Express/views/crear.ejs
@@ -1,3 +1,14 @@
 <%- include("template/cabecera", {tituloWeb: "Nuevo Mapa"}) %> 
-    <h1>Crear nuevo mapa</h1>
+    
+    <div class="container">
+        <h1>Crear nuevo mapa</h1>
+        <form action="/mapas" class="my-2" method="POST">
+            <input type="text" placeholder="Nombre Mapa" class="form-control my-2" name="nombre">
+            <input type="text" placeholder="Tipo Mapa" class="form-control my-2" name="tipo">
+            <input type="text" placeholder="Descripción Mapa" class="form-control my-2" name="descripcion">
+            <button type="submit" class="btn btn-dark btn-block">
+                Agregar
+            </button>
+        </form>
+    </div>
 <% include("template/footer") %> 
