Boton para acceder a la vista crear añadido a la vista mapas

--- a/03Express/views/mapas.ejs
+++ b/03Express/views/mapas.ejs
@@ -4,7 +4,10 @@
     
     <h1>Mapas</h1>
 
+    <a class="btn btn-success btn-block my-4" href="/mapas/crear">Crear un nuevo mapa</a>
+
     <table class="table">
+
         <thead>
             <tr>
                 <th>id Mapa</th>
