Eliminar y crear mapas funciona

--- a/03Express/views/mapas.ejs
+++ b/03Express/views/mapas.ejs
@@ -28,7 +28,7 @@
                         <td> <%=mapa.nombre%></td>
                         <td><%=mapa.tipo%></td>
                         <td><%=mapa.descripcion%></td>
-                        <td>Acciones</td>
+                        <td><a  class="btn btn-warning btn-block" href="mapas/<%= mapa.id %>">Detalles</a></td>
                     </tr>
                 
 
