Cerrar sesion te devuelve a inicio

--- a/03Express/views/template/cabecera.ejs
+++ b/03Express/views/template/cabecera.ejs
@@ -36,7 +36,7 @@
               </div>
               <div  id="iniciado">
                 <li class="nav-item ">
-                  <a class="nav-link " href="" id="cerrarSesion" onclick="cerrarSesion()">Cerrar sesión</a>
+                  <a class="nav-link " href="/" id="cerrarSesion" onclick="cerrarSesion()">Cerrar sesión</a>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link " href="/mapas" id="mapas">Mapas</a>
@@ -71,7 +71,6 @@
 
       function cerrarSesion(){
         sessionStorage.removeItem("usuario");
-        location.reload;
       }
 
     </script>
